--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@fullcalendar/angular": "^4.3.1",
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
     "@types/jquery": "^3.3.31",
     "bootstrap": "^4.3.1",
     "cdk": "^1.18.0",
+    "daypilot-pro-angular": "https://npm.daypilot.org/daypilot-pro-angular/trial/2019.3.4012.tar.gz",
     "fullcalendar": "^3.10.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
