--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "@fullcalendar/angular": "^4.3.1",
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "@types/jquery": "^3.3.31",
-    "bootstrap": "^4.3.1",
+    "angular-bootstrap-datetimepicker": "^4.0.2",
+    "bootstrap": "^4.4.1",
     "cdk": "^1.18.0",
     "daypilot-pro-angular": "https://npm.daypilot.org/daypilot-pro-angular/trial/2020.1.4205.tar.gz",
     "fullcalendar": "^3.10.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-material-timepicker": "^5.3.0",
+    "open-iconic": "^1.1.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
